# Learning-OpenGL

./: CMakeLists.txt  README.md  indexbuffer.cpp  indexbuffer.hpp  main.cpp  renderer.cpp  renderer.hpp  shaders.cpp  shaders.hpp  vertexbuffer.cpp  vertexbuffer.hpp
shaders/: fragment.glsl  vertex.glsl
